--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 <body>
     <h1>Estimate Your Cost</h1>
     <div class="container">
-        hello
+        <div class="tabs">
+            <p>Free</p>
+            <p class="active">Team</p>
+            <p>Professional</p>
+            <p>Enterprise</p>
+
+        </div>
     </div>
     
 </body>
