--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <p class="active">Team</p>
             <p>Professional</p>
             <p>Enterprise</p>
-
         </div>
+        <div class="line"></div>
     </div>
     
 </body>
